--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -367,12 +367,38 @@
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\arrow_414042_8px-01.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\Arrow_968c83_12px_mobile.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\breadcrumb-arrow.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked-default.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked-green.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked-lime.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked-orange.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked-red.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked-yellow.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-checked.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked-default.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked-green.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked-lime.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked-orange.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked-red.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked-yellow.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checkbox-unchecked.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\checked.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\danger.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\dekningskart.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\eksternlink-disabled.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\eksternlink-white.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\eksternlink.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\external_link_3867c8_12px-01.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\external_link_ffffff_12px-01.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\file-xml-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\file-xml.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\format-checked-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\format-checked.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\format-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\format-warning-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\format-warning.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\format.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\geonorge_devlogo.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\geonorge_logo.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\geonorge_testlogo.svg" />
@@ -398,6 +424,10 @@
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\info-white.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\info.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-needs-permission-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-needs-permission-white.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-needs-permission.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-unavailable-disabled.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-unavailable-white.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-unavailable.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\kartmarkoer-warning-disabled.svg" />
@@ -411,6 +441,16 @@
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\lukk_968c83_50px-01-01.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\open_fe5000_50px-01.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\produktark.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\projection-checked-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\projection-checked.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\projection-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\projection-warning-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\projection-warning.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\projection.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\radio-checked-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\radio-checked.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\radio-unchecked-disabled.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\radio-unchecked.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\seksjonstegn.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\smile-green.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\smile-red.svg" />
@@ -419,6 +459,7 @@
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\sosi.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\tick_fe5000_16px.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\totop_3867c8_75px-01.svg" />
+    <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\warning.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\svg\wfs.svg" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\images\unlock.png" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\js\main.js" />
@@ -558,10 +599,6 @@
       <Name>Geonorge.NedlastingApi</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Content Include="Views\Order\Details.cshtml" />
-  </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bower_components\kartverket-felleskomponenter\.bower.json" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\fonts\702ZOKiLJc3WVjuplzInF5uFdDttMLvmWuJdhhgs.ttf" />
@@ -592,6 +629,9 @@
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\partials\_SharedMenu.min.cshtml" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\bower.json" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Order\Details.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
