--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <appSettings>
+  <add key="GeoNetworkUrl" value="http://www.geonorge.no/geonetworkbeta/" />
+  <add key="GeoNetworkUsername" value="" />
+  <add key="GeoNetworkPassword" value="" />
+  <add key="GeonorgeUsername" value="" />
   <add key="ExternalClientToken" value="" />
 </appSettings>
