--- a/Kartverket.Geonorge.Download.Tests/packages.config
+++ b/Kartverket.Geonorge.Download.Tests/packages.config
@@ -1,24 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
-  <package id="EntityFramework.MoqHelper" version="1.0.0" targetFramework="net452" />
-  <package id="FluentAssertions" version="4.17.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="EntityFramework.MoqHelper" version="1.0.1" targetFramework="net471" />
+  <package id="FluentAssertions" version="5.5.3" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net471" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Moq" version="4.5.28" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Moq" version="4.10.1" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="xunit" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net471" />
+  <package id="xunit" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net471" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net471" />
+  <package id="xunit.assert" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.core" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net471" />
+  <package id="xunit.runner.visualstudio" version="2.4.1" targetFramework="net471" developmentDependency="true" />
 </packages>
