--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -6,56 +6,56 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-    <section name="basicAuth" type="WebApi.BasicAuth.BasicAuthSection, WebApi.BasicAuth" />
-    <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-    <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-    <section name="kentor.authServices" type="Kentor.AuthServices.Configuration.KentorAuthServicesSection, Kentor.AuthServices" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+    <section name="basicAuth" type="WebApi.BasicAuth.BasicAuthSection, WebApi.BasicAuth"/>
+    <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+    <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+    <section name="kentor.authServices" type="Kentor.AuthServices.Configuration.KentorAuthServicesSection, Kentor.AuthServices"/>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <basicAuth configSource="authentication.config" />
+  <basicAuth configSource="authentication.config"/>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=kartverket_nedlasting;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=kartverket_nedlasting;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <log4net debug="true">
     <root>
-      <priority value="DEBUG" />
-      <appender-ref ref="TraceAppender" />
-      <appender-ref ref="LogFileAppender" />
+      <priority value="DEBUG"/>
+      <appender-ref ref="TraceAppender"/>
+      <appender-ref ref="LogFileAppender"/>
     </root>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="c:\\inetpub\\logs\\download" />
-      <appendToFile value="true" />
-      <rollingStyle value="Date" />
-      <param name="StaticLogFileName" value="false" />
-      <datePattern value=".yyyyMMdd.lo\g" />
+      <file value="c:\\inetpub\\logs\\download"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <param name="StaticLogFileName" value="false"/>
+      <datePattern value=".yyyyMMdd.lo\g"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger %message%newline" />
+        <conversionPattern value="%date [%thread] %-5level %logger %message%newline"/>
       </layout>
     </appender>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%-6level %message%newline" />
+        <conversionPattern value="%-6level %message%newline"/>
       </layout>
     </appender>
   </log4net>
   <appSettings file="settings.config">
-    <add key="HttpTimeout" value="60" />
-    <add key="BundlingEnabled" value="true" />
-    <add key="DistributedBy" value="Geonorge" />
-    <add key="BuildVersionNumber" value="3.1" />
-    <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
-    <add key="DownloadUrl" value="http://localhost:61236/" />
-    <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
-    <add key="FmeAreaChecker" value="http://testnedlasting.geonorge.no/fmedatastreaming/Util/AreaChecker.fmw?" />
-    <add key="FmeAreaCheckerEnabled" value="true" />
-    <add key="OrderBundleServiceUrl" value="http://testnedlasting.geonorge.no/fmedatadownload/Orders/FilePacker.fmw" />
-    <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
-    <add key="WebmasterEmail" value="post@norgedigitalt.no" />
-    <add key="SmtpHost" value="smtp.altibox.no" />
-    <add key="EnvironmentName" value="dev" />
-    <add key="SupportsMultiCulture" value="true" />
+    <add key="HttpTimeout" value="60"/>
+    <add key="BundlingEnabled" value="true"/>
+    <add key="DistributedBy" value="Geonorge"/>
+    <add key="BuildVersionNumber" value="3.1"/>
+    <add key="GeonorgeUrl" value="//www.test.geonorge.no/"/>
+    <add key="DownloadUrl" value="http://localhost:61236/"/>
+    <add key="RegistryUrl" value="http://register.dev.geonorge.no/"/>
+    <add key="FmeAreaChecker" value="http://testnedlasting.geonorge.no/fmedatastreaming/Util/AreaChecker.fmw?"/>
+    <add key="FmeAreaCheckerEnabled" value="true"/>
+    <add key="OrderBundleServiceUrl" value="http://testnedlasting.geonorge.no/fmedatadownload/Orders/FilePacker.fmw"/>
+    <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/"/>
+    <add key="WebmasterEmail" value="post@norgedigitalt.no"/>
+    <add key="SmtpHost" value="smtp.altibox.no"/>
+    <add key="EnvironmentName" value="dev"/>
+    <add key="SupportsMultiCulture" value="true"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -67,118 +67,94 @@
   -->
   <system.web>
     <customErrors mode="Off" defaultRedirect="~/Error/">
-      <error statusCode="404" redirect="~/Error/NotFound/" />
-      <error statusCode="401" redirect="~/Error/Unauthorized/" />
+      <error statusCode="404" redirect="~/Error/NotFound/"/>
+      <error statusCode="401" redirect="~/Error/Unauthorized/"/>
     </customErrors>
-    <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5" enableVersionHeader="false" />
-    <httpModules />
+    <authentication mode="None"/>
+    <compilation debug="true" targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5" enableVersionHeader="false"/>
+    <httpModules/>
   </system.web>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
-        <clear />
-        <remove name="X-Powered-By" />
+        <clear/>
+        <remove name="X-Powered-By"/>
       </customHeaders>
     </httpProtocol>
-    <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough" />
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough"/>
     <modules>
-      <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <remove name="FormsAuthentication" />
-      <remove name="UrlRoutingModule-4.0" />
-      <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition="" />
+      <add name="SessionAuthenticationModule" type="System.IdentityModel.Services.SessionAuthenticationModule, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+      <remove name="FormsAuthentication"/>
+      <remove name="UrlRoutingModule-4.0"/>
+      <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition=""/>
     </modules>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+      <remove name="OPTIONSVerbHandler"/>
+      <remove name="TRACEVerbHandler"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
   </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
   <kentor.authServices entityId="http://localhost:61236/" returnUrl="http://localhost:61236/">
     <identityProviders>
       <add entityId="https://testidp.statkart.no/simplesaml/saml2/idp/metadata.php" signOnUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SSOService.php" binding="HttpRedirect" allowUnsolicitedAuthnResponse="false" logoutUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SingleLogoutService.php">
-        <signingCertificate storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="312d11889139a297faa4c3f024e3ca32bb183931" x509FindType="FindByThumbprint" />
+        <signingCertificate storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="312d11889139a297faa4c3f024e3ca32bb183931" x509FindType="FindByThumbprint"/>
       </add>
     </identityProviders>
     <serviceCertificates>
-      <add storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="7115DBA2C2E4A751C352B5569418124498FB4F78" x509FindType="FindByThumbprint" />
+      <add storeName="TrustedPublisher" storeLocation="LocalMachine" findValue="7115DBA2C2E4A751C352B5569418124498FB4F78" x509FindType="FindByThumbprint"/>
     </serviceCertificates>
   </kentor.authServices>
   <system.identityModel>
-    <identityConfiguration />
+    <identityConfiguration/>
   </system.identityModel>
   <system.identityModel.services>
     <federationConfiguration>
-      <cookieHandler requireSsl="false" />
+      <cookieHandler requireSsl="false"/>
     </federationConfiguration>
   </system.identityModel.services>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="WebGrease" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Http" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Autofac" publicKeyToken="17863AF14B0044DA" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0"/>
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="EB42632606E9261F" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
