--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -1,41 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="Arkitektum.GIS.Lib.MetadataCSW" version="1.9.94" targetFramework="net452" />
-  <package id="Arkitektum.GIS.Lib.SerializeUtil" version="1.3.0.0" targetFramework="net452" />
-  <package id="Autofac" version="4.2.0" targetFramework="net452" />
-  <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net452" />
-  <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net452" />
+  <package id="Arkitektum.GIS.Lib.MetadataCSW" version="1.9.100" targetFramework="net471" />
+  <package id="Arkitektum.GIS.Lib.SerializeUtil" version="1.3.1" targetFramework="net471" />
+  <package id="Autofac" version="4.8.1" targetFramework="net471" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net471" />
+  <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
-  <package id="GeoNorgeAPI" version="3.0.54" targetFramework="net452" />
+  <package id="GeoNorgeAPI" version="3.0.72" targetFramework="net471" />
   <package id="Kartverket.Geonorge.Utilities" version="1.0.43" targetFramework="net452" />
-  <package id="Kentor.AuthServices" version="0.19.0" targetFramework="net452" />
-  <package id="Kentor.AuthServices.HttpModule" version="0.19.0" targetFramework="net452" />
-  <package id="Kentor.AuthServices.Mvc" version="0.19.0" targetFramework="net452" />
-  <package id="log4net" version="2.0.5" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Kentor.AuthServices" version="0.23.0" targetFramework="net471" />
+  <package id="Kentor.AuthServices.HttpModule" version="0.23.0" targetFramework="net471" />
+  <package id="Kentor.AuthServices.Mvc" version="0.23.0" targetFramework="net471" />
+  <package id="log4net" version="2.0.8" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Versioning" version="2.1.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Versioning.ApiExplorer" version="1.0.2" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Versioning" version="3.0.0" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Versioning.ApiExplorer" version="3.0.1" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net471" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net471" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="OctoPack" version="3.4.2" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
+  <package id="OctoPack" version="3.6.3" targetFramework="net471" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="ScottBrady91.AspNet.Identity.ConfigurablePasswordHasher" version="1.0.0" targetFramework="net452" />
+  <package id="Sustainsys.Saml2" version="0.23.0" targetFramework="net471" />
+  <package id="Sustainsys.Saml2.HttpModule" version="0.23.0" targetFramework="net471" />
+  <package id="Sustainsys.Saml2.Mvc" version="0.23.0" targetFramework="net471" />
   <package id="WebApi.BasicAuth" version="0.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
